Fix icon alignment

--- a/css/main.css
+++ b/css/main.css
@@ -93,9 +93,9 @@ h1 {
   height: 75%;
 }
 
-.icon-a {
+.i-24 {
   position: relative;
-  top: 5px;
+  top: -3px;
 }
 
 .btn-nav:hover {
